--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
