--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@tailwindcss/vite": "^4.0.3",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
