--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-progress": "^1.1.2",
     "@tailwindcss/vite": "^4.0.3",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
